<resources>
    <string name="app_name">Book it to the moon</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_header">Book it to the moon</string>
    <string name="locate_buttom">Localize the moon</string>
    <string name="information_buttom">Information</string>
    <string name="galery_buttom">Gallery</string>
    <string name="favourites_buttom">Favourites</string>
    <string name="options_buttom">Options</string>
    <string name="back_buttom">Back</string>
    <string name="funny_facts_button">Funny Facts</string>
    <string name="history_button">History</string>

    <string name="moon_history">
        The Moon was probably made 4.5 billion years ago when a large object
        hit the Earth and blasted out rocks that came together to orbit round the Earth.
        They eventually melted together, cooled down and became the Moon.
        For another 500 million years pieces of rock kept striking aginst the surface of the Moon
    </string>
    <string name="moon_history_header">Moon History</string>
</resources>
